--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,12 @@ spring.datasource.url = jdbc:mysql://localhost:3306/springboot
 spring.datasource.username = root
 spring.datasource.password = root
 
+spring.data.rest.page-param-name=page
+spring.data.rest.limit-param-name=limit
+spring.data.rest.sort-param-name=sort
+spring.data.rest.default-page-size = 5
+spring.data.rest.max-page-size = 10
+
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
